Upload code coverage to Codacy from Travis-CI
- Use mvn verify goal instead of Travis-CI's default 'test'
  Reason: to generate the JaCoCo report xml file
- Use the codacy maven plugin to upload the code coverage results.
  Tried to use the Codacy command line tool for uploading the report
  but it was periodically failing to be downloaded from GitHub.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,7 @@ before_install:
   # Since using JDK7 - prevent error downloading from Maven Central: Received fatal alert: protocol_version
   # See: https://central.sonatype.org/articles/2018/May/04/discontinued-support-for-tlsv11-and-below/
   - alias mvn='mvn -Dhttps.protocols=TLSv1.2'
+script: mvn verify -B
+after_success:
+  # -- Codacy --
+  - mvn codacy:coverage -B
