--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,15 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.gavinmogan</groupId>
+        <artifactId>codacy-maven-plugin</artifactId>
+        <version>1.1.0</version>
+        <configuration>
+          <coverageReportFile>target/site/jacoco/jacoco.xml</coverageReportFile>
+          <apiToken>none</apiToken>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
