Deploy release artifacts to Bintray
- Run only for tags
- Requires the following environment variables:
  - BINTRAY_REPO_SLUG - the target repository in Bintray, in the format:
                        <subject>/<repo>
  - BINTRAY_USER      - the user in Bintray to use for authentication
                        when uploading (deploying) artifacts
  - BINTRAY_API_KEY   - the API key to use for the authenticating user
  - BINTRAY_PUBLISH   - optional flag for whether to publish the
                        artifacts after they are deployed
                        (values: {0,1}, default: 0)
  - BINTRAY_OVERRIDE  - optional flag for whether to override existing
                        artifacts (values: {0,1}, default: 0)
  (Note: default values are set by the bintray-settings.xml)

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,9 @@ script: mvn verify -B
 after_success:
   # -- Codacy --
   - mvn codacy:coverage -B
+deploy:
+  provider: script
+  script: mvn deploy -s .travis/bintray-settings.xml -DskipTests -B
+  skip_cleanup: true
+  on:
+    tags: true
