--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ after_success:
   - mvn codacy:coverage -B
 deploy:
   provider: script
-  script: mvn deploy -s .travis/bintray-settings.xml -DskipTests -B
+  script: mvn deploy -s .travis/bintray-settings.xml -DskipTests -B -Dhttps.protocols=TLSv1.2
   skip_cleanup: true
   on:
     tags: true
