--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.ebay.sd.commons</groupId>
   <artifactId>commands-cli</artifactId>
-  <version>0.7.1-SNAPSHOT</version>
+  <version>0.7.1</version>
   <name>Commands CLI</name>
   <packaging>jar</packaging>
 
